# MangoChordDetector

./: CMakeLists.txt
Source/: ChordDetector.h  Main.cpp  MusicalDisplay.h  NoteDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleFFTTutorial_01.h
